
	* src/nact/nact-action-conditions-editor.c:
	* src/nact/nact-action-conditions-editor.h:
	* src/nact/nact-action-profiles-editor.c:
	* src/nact/nact-action-profiles-editor.h:
	* src/nact/nact-profile-conditions-editor.c:
	* src/nact/nact-profile-conditions-editor.h: Removed files.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	Uses GtkSortable interface.
	Remove set_sorted_actions API.
	nact_iactions_list_toggle_collapse: new function.

	* src/nact/nact-icommand-tab.c:
	Disable the example label when there is no current profile.

	* src/nact/nact-iconditions-tab.c:
	* src/nact/nact-iconditions-tab.h
	(nact_iconditions_tab_get_isfiledir,
	nact_iconditions_tab_get_multiple): New functions.

	* src/nact/nact-iadvanced-tab.c:
	* src/nact/nact-iadvanced-tab.h (nact_iadvanced_tab_get_schemes):
	New function.

	* src/nact/nact-main-window.c:
	Update menu tooltips to be dot-terminated.
	New action is taken from GTK_STOCK_NEW.

	* src/nact/nautilus-actions-config.ui:
	Example label now wraps on more than two lines.
	Scheme lists now is more than four rows.
	All fields have tooltip.

2009-07-18 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-action.c:
	* src/common/na-action.c (na_action_are_equal):
	Function takes const arguments.

	* src/nact/base-application.c:
	* src/nact/nact-iaction-tab.c:
	Disable debug message.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (set_sorted_actions):
	New virtual function: advertise the implementer of the interface
	of the new address of the sorted list.
	Use GtkTreeModelFilter to display actions and profiles.
	Enable connecting lines in tree view.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h:
	New files which define NactICommandTab interface.

	* src/nact/nact-iconditions-tab.c:
	* src/nact/nact-iconditions-tab.h:
	New files which define NactIConditionsTab interface.

	* src/nact/nact-iadvanced-tab.c: